--- a/index.html
+++ b/index.html
@@ -90,19 +90,21 @@ What expertise do you have to share with other grantees?
 -->
 
 .center[
-**Hoping to**
+**Hopes**
 ]
 
-- Tighten collaboration and inter-operability with downstream and upstream projects
-- Enjoy the west coast TODO write something else
+- Collaborate with downstream and upstream projects
+- Community and project management
+- Long-term funding
 
 .center[
 **Expertise**
 ]
 
 - Machine Learning
-- Optimizing code with Cython or Numba
-- TODO Andy
+- Maintaining a complex/big codebase
+- Dealing with backward compatibility
+- ...
 
 
     </textarea>
