--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ What expertise do you have to share with other grantees?
 - Long-term funding
 
 .center[
-**Expertise**
+**What we can bring**
 ]
 
 - Machine Learning
